<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andy App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Sign in</string>
    <string name="sign_in_button_label">Sign in</string>

    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="login_activity_newaccount_text">Sign in to your Sample SyncAdapter account. </string>

    <string name="back_button_label">Back</string>
    <string name="cancel_button_label">Cancel</string>

    <string name="title_activity_main">Home</string>
    <string name="title_activity_about_activity">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_tabbed">Movies</string>
    <string name="title_activity_menu">Rush Albums</string>

    <string name="title_pref_category_checkbox">Checkbox Settings</string>
    <string name="title_pref_checkbox_one">Checkbox One</string>
    <string name="summary_pref_checkbox_one">Some summary text for check box one.</string>
    <string name="title_pref_checkbox_two">Checkbox One</string>
    <string name="summary_pref_checkbox_two">Some summary text for check box two.</string>
    <string name="title_pref_list">List Options</string>
    <string name="summary_pref_list">Please select an option from the list.</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>

    <string name="dialog_title">You pressed</string>

</resources>
